# DepthNets

./: .gitignore  LICENSE  README.md
FaceWarper/: .gitignore  README.md  warp_dataset.py
FaceWarper/FaceWarperClient/: FaceWarperClient.py  __init__.py
FaceWarper/FaceWarperServer/: CMakeLists.txt  build_windows.bat
FaceWarper/FaceWarperServer/source/: FaceWarper.cpp  face.h  fbo.h  geo.h  image.h  io.h  platform.h  shader.cpp  shader.h  texture.h
FaceWarper/FaceWarperServer/windows_build/: FaceWarperServer.filters  FaceWarperServer.sln  FaceWarperServer.vcxproj
cyclegan/: README.md  environment.yml  eval.py  task_launcher_bgsynth.py  task_launcher_faceswap.py  util.py
cyclegan/architectures/: block9_a3b3.py  block9_a6b3.py  test_unet.py
cyclegan/experiments/: experiment_depthnet_bg_vs_frontal.sh  experiment_faceswap.sh
cyclegan/i2i/: base.py  cyclegan.py
depthnet-pytorch/: README.md  aigns.py  depthnet_gan.py  depthnet_gan_learnm.py  depthnet_gan_sdam.py  env.sh  env.sh.example  environment.yml  export_anim_to_facewarper.py  export_to_facewarper.py  export_to_facewarper_single.py  interactive.py  interactive_aigns.py  interactive_mofa.py  prepare_dataset.py  task_launcher_aigns.py  task_launcher_depthnet.py  util.py
depthnet-pytorch/architectures/: aign.py  aign_sn.py  depthnet_sd5_learnm.py  depthnet_shallowd5.py  init.py
depthnet-pytorch/exps/: exp1.lamb1.sd5.nogan.learnm.sh  exp1.lamb1.sd5.nogan.sigma0.05.sh  exp1.lamb1.sd5.nogan.sigma0.fixm.sh  exp1.lamb1.sd5.wgan.dnorm0.1.learnm.sh  exp1.lamb1.sd5.wgan.dnorm0.1.sigma0.05.sh  (+1 more)
(+38 files in other folders)
